BusOne/src/objects/Alert_User_Action_vod__c.object
<CustomObject>
    <description>Stores the intersection of Alerts and Users. A row gets created in this object when a user acts upon an alert.</description>
    <fields>
        <fullName>Alert_vod__c</fullName>
        <description>Reference to the parent alert.</description>
        <label>Alert</label>
        <referenceTo>Alert_vod__c</referenceTo>
        <relationshipLabel>Alert User Actions</relationshipLabel>
        <relationshipName>Alert_User_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dismissed_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the parent alert has been dismissed by the user.</description>
        <label>Dismissed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique key field that prevents duplicate users from being added to the same alert. Unique case sensitive</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Push_Notify_APNS_Datetime_vod__c</fullName>
        <description>Date/Time stamp of when the Scheduled Push Notification job processed the alert to the APNS for the user</description>
        <label>Last Push Notify APNS Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that has visibility to the parent alert.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alert_User_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alert User Action</label>
    <nameField>
        <displayFormat>A{00000000}</displayFormat>
        <label>Alert User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert User Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>